# aoc-2022

./: .gitignore  LICENSE  README.md  pyproject.toml  run_all.py
.config/: clean.json  compile.json  languages.json  run.json
c/: Makefile  README.md  aoc.sh
c/include/: aoc_days.h  aoc_print.h
c/include/days/: day01.h  day02.h
c/lib/: Makefile  README.md
c/lib/src/: parse_int.c
c/src/: aoc_days.c  aoc_run.c  day01.c  day02.c  hellofunc.c  hellomake.c
elixir/: README.md  aoc-2022.exs  aoc.exs  mix.exs
elixir/lib/: days.ex
elixir/lib/days/: day01.ex  day02.ex  day03.ex  day04.ex  day05.ex  day06.ex  day07.ex  day08.ex  day09.ex  day10.ex  day11.ex  day12.ex  day13.ex  day14.ex  day15.ex  day16.ex  day17.ex  day18.ex  day19.ex  day20.ex  day21.ex  day22.ex  day23.ex  day24.ex  day25.ex
python/: README.md  day01.py  main.py  pyproject.toml
python/days/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
python/days/util/: lib.py
rust/: Cargo.toml  README.md
rust/day01/src/: main.rs
rust/src/: day01.rs  days.rs  lib.rs  main.rs
rust/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day24.rs
rust/src/util/: macro.rs  mod.rs
scripts/: __init__.py  clean.py  comp.py  config.py  run.py
typescript/: .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: aoc-2022.ts  day01.ts  index.ts
typescript/src/constants/: INPUT_DIR.ts  INPUT_FILE.ts  INPUT_FILES.ts
typescript/src/days/: day01.ts  day02.ts  day03.ts  (+23 more)
(+7 files in other folders)
