[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = "Advent of Code 2022 solutions in multiple different languages."
authors = ["Benni-Math <benediktjens.arnarsson@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
aoc-2022 = 'scripts:crc_all'
compile-all = 'scripts:compile_all'
run-all = 'scripts:run_all'
clean-all = 'scripts:clean_all'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
