[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = "Advent of Code 2022 solutions in multiple different languages."
authors = ["Benni-Math <benediktjens.arnarsson@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
aoc-2022 = "scripts.run:run_all"
aoc-only = "scripts.run:run_one"
compile-all = "scripts.comp:compile_all"
compile-only = "scripts.comp:compile_one"
clean-all = "scripts.clean:clean_all"
clean-only = "scripts.clean:clean_one"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
